<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Picture">


    <com.zair.geometry.DrawView
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.zair.geometry.DrawView>

    <ScrollView
        android:layout_width="195dp"
        android:layout_height="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/solving"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/solve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="195dp"
        android:layout_height="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/given"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/given"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
               />

            <TextView
                android:id="@+id/long_dash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_dash"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/found_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Found"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>